tests/empty.json.err
Parse error at line 1

001: 
     ^
Unexpected end
